[package]
name = "orders"
version = "0.1.0"

[lib]
name = "orders_lib"
path = "src/lib.rs"

[dependencies]
bb8 = { git = "https://github.com/StoriqaTeam/bb8" }
bb8-postgres = { git = "https://github.com/StoriqaTeam/bb8" }
chrono = { version = "*", features = ["serde"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
derive_more = "0.11"
either = "*"
env_logger = "*"
failure = "0.1"
futures = "0.1"
futures-state-stream = "0.2"
geo = { version = "*", features = ["serde"] }
geo-types = { version = "*", features = ["serde"] }
hyper = "0.11"
hyper-tls="0.1"
lazy_static = "*"
log = "*"
maplit = "*"
postgres = { git = "https://github.com/StoriqaTeam/rust-postgres" }
rand = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = "*"
tokio-core = "*"
tokio-postgres = { git = "https://github.com/StoriqaTeam/rust-postgres", features = ["with-serde_json-1", "with-chrono-0.4", "with-uuid-0.6", "with-geo-0.10"] }
stq_api = { path = "vendor/libstqbackend/api" }
stq_acl = { path = "vendor/libstqbackend/acl" }
stq_db = { path = "vendor/libstqbackend/db" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_roles = { path = "vendor/libstqbackend/roles" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_types = { path = "vendor/libstqbackend/types" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
uuid = { version = "*", features = ["serde", "v4"] }
validator = "0.7.1"
validator_derive = "0.7.2"
sentry = "0.3"
