[package]
name = "orders"
version = "0.1.0"

[lib]
name = "orders_lib"
path = "src/lib.rs"

[[bin]]
name = "delivered_orders"
path = "src/bin/delivered_orders.rs"

[[bin]]
name = "orders"
path = "src/main.rs"

[dependencies]
bb8 = { git = "https://github.com/StoriqaTeam/bb8" }
bb8-postgres = { git = "https://github.com/StoriqaTeam/bb8" }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
derive_more = "0.11"
either = "1.5"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1.7"
futures-state-stream = "0.2"
geo = { version = "0.10", features = ["serde"] }
geo-types = { version = "0.2", features = ["serde"] }
hyper = "0.11"
hyper-tls = "0.1"
lazy_static = "1.1"
log = "0.4"
maplit = "1.0"
postgres = { git = "https://github.com/StoriqaTeam/rust-postgres" }
rand = "0.5"
regex = "1.0"
sentry = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_acl = { path = "vendor/libstqbackend/acl" }
stq_api = { path = "vendor/libstqbackend/api" }
stq_db = { path = "vendor/libstqbackend/db" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_roles = { path = "vendor/libstqbackend/roles" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_types = { path = "vendor/libstqbackend/types" }
tokio = "0.1"
tokio-core = "0.1"
tokio-postgres = { git = "https://github.com/StoriqaTeam/rust-postgres", features = ["with-serde_json-1", "with-chrono-0.4", "with-uuid-0.6", "with-geo-0.10"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
validator = "0.8"
validator_derive = "0.8"
